[gd_scene load_steps=2 format=3 uid="uid://bcnygl176lg14"]

[ext_resource type="Script" path="res://Script/debug_menu.gd" id="1_v3uwc"]

[node name="DebugMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 844.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v3uwc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -23.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 36.0
grow_horizontal = 0
text = "X"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Debug Menu"

[node name="Label3" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.016
anchor_right = 0.016
offset_left = 0.0719995
offset_top = 66.0
offset_right = 122.072
offset_bottom = 89.0
grow_horizontal = 2
text = "Modify Element"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 94.0
offset_right = 263.0
offset_bottom = 160.0
columns = 5

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "ID"

[node name="Label5" type="Label" parent="GridContainer"]
layout_mode = 2
text = " "

[node name="Label2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Color"

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Speed"

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "minimum"

[node name="ID" type="VScrollBar" parent="GridContainer"]
layout_mode = 2
max_value = 9.0
step = 1.0

[node name="IDtext" type="Label" parent="GridContainer"]
layout_mode = 2
text = "0
"

[node name="Color" type="ColorPickerButton" parent="GridContainer"]
layout_mode = 2

[node name="Speed" type="HScrollBar" parent="GridContainer"]
layout_mode = 2
max_value = 0.9
step = 0.1

[node name="Range" type="LineEdit" parent="GridContainer"]
layout_mode = 2
virtual_keyboard_type = 3

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 174.0
offset_right = 139.0
offset_bottom = 197.0
text = "Visible Elements:"

[node name="Layer" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 206.0
offset_right = 284.0
offset_bottom = 257.0
columns = 5

[node name="e1" type="Label" parent="Layer"]
layout_mode = 2
text = "0
"

[node name="e2" type="Label" parent="Layer"]
layout_mode = 2
text = "1
"

[node name="e3" type="Label" parent="Layer"]
layout_mode = 2
text = "2
"

[node name="e4" type="Label" parent="Layer"]
layout_mode = 2
text = "3
"

[node name="e5" type="Label" parent="Layer"]
layout_mode = 2
text = "4
"

[node name="1" type="CheckBox" parent="Layer"]
layout_mode = 2
button_pressed = true

[node name="2" type="CheckBox" parent="Layer"]
layout_mode = 2

[node name="3" type="CheckBox" parent="Layer"]
layout_mode = 2

[node name="4" type="CheckBox" parent="Layer"]
layout_mode = 2
button_pressed = true

[node name="5" type="CheckBox" parent="Layer"]
layout_mode = 2

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 269.0
offset_right = 137.0
offset_bottom = 292.0
text = "Create Element (Key X)"

[node name="Layer2" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 301.0
offset_right = 282.0
offset_bottom = 352.0
columns = 5

[node name="e1" type="Label" parent="Layer2"]
layout_mode = 2
text = "0
"

[node name="e2" type="Label" parent="Layer2"]
layout_mode = 2
text = "1
"

[node name="e3" type="Label" parent="Layer2"]
layout_mode = 2
text = "2
"

[node name="e4" type="Label" parent="Layer2"]
layout_mode = 2
text = "3
"

[node name="e5" type="Label" parent="Layer2"]
layout_mode = 2
text = "4
"

[node name="1" type="CheckBox" parent="Layer2"]
layout_mode = 2
button_pressed = true

[node name="2" type="CheckBox" parent="Layer2"]
layout_mode = 2

[node name="3" type="CheckBox" parent="Layer2"]
layout_mode = 2

[node name="4" type="CheckBox" parent="Layer2"]
layout_mode = 2

[node name="5" type="CheckBox" parent="Layer2"]
layout_mode = 2

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="GridContainer/ID" to="." method="_on_id_value_changed"]
[connection signal="color_changed" from="GridContainer/Color" to="." method="_on_color_color_changed"]
[connection signal="value_changed" from="GridContainer/Speed" to="." method="_on_speed_value_changed"]
[connection signal="text_changed" from="GridContainer/Range" to="." method="_on_range_text_changed"]
[connection signal="toggled" from="Layer/1" to="." method="_on_ID1_toggled"]
[connection signal="toggled" from="Layer/2" to="." method="_on_ID2_toggled"]
[connection signal="toggled" from="Layer/3" to="." method="_on_ID3_toggled"]
[connection signal="toggled" from="Layer/4" to="." method="_on_ID4_toggled"]
[connection signal="toggled" from="Layer/5" to="." method="_on_ID5_toggled"]
[connection signal="toggled" from="Layer2/1" to="." method="_on_create1_toggled"]
[connection signal="toggled" from="Layer2/2" to="." method="_on_create2_toggled"]
[connection signal="toggled" from="Layer2/3" to="." method="_on_create3_toggled"]
[connection signal="toggled" from="Layer2/4" to="." method="_on_create4_toggled"]
[connection signal="toggled" from="Layer2/5" to="." method="_on_create5_toggled"]
